--- a/src/main/res/layout/sex_choise_item.xml
+++ b/src/main/res/layout/sex_choise_item.xml
@@ -3,5 +3,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="#000000"
+    android:textColor="@color/list_text_black"
     android:textSize="16sp" />
