--- a/src/main/res/layout/item_buying_btn.xml
+++ b/src/main/res/layout/item_buying_btn.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:id="@+id/itContainer"
-        style="@style/BigButtonsStyle"
+        style="@style/ViewWithElevation"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
@@ -30,6 +30,5 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone" />
-
     </RelativeLayout>
 </RelativeLayout>
