--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -139,7 +139,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="ButtonWhiteText.Mini" parent="BigButtonsStyle">
+    <style name="ButtonWhiteText.Mini">
         <item name="android:textSize">13sp</item>
     </style>
 
@@ -730,12 +730,12 @@
 
     <style name="Widget.Topface" />
 
-    <style name="Widget.Topface.Button.Big.Gray" parent="BigButtonsStyle">
+    <style name="Widget.Topface.Button.Big.Gray">
         <item name="android:background">@drawable/btn_gray_selector</item>
         <item name="android:textColor">@drawable/btn_gray_text_color_selector</item>
     </style>
 
-    <style name="Widget.Topface.Button.Big.Red" parent="BigButtonsStyle">
+    <style name="Widget.Topface.Button.Big.Red">
         <item name="android:background">@drawable/btn_red_selector</item>
         <item name="android:textColor">@drawable/btn_red_text_color_selector</item>
     </style>
@@ -748,12 +748,12 @@
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="Widget.Topface.Button.Big.Blue" parent="BigButtonsStyle">
+    <style name="Widget.Topface.Button.Big.Blue">
         <item name="android:background">@drawable/btn_blue_selector</item>
         <item name="android:textColor">@drawable/btn_blue_text_color_selector</item>
     </style>
 
-    <style name="Widget.Topface.Button.Blue" parent="BigButtonsStyle">
+    <style name="Widget.Topface.Button.Blue">
         <item name="android:background">@drawable/btn_blue_selector</item>
         <item name="android:textColor">@drawable/btn_blue_text_color_selector</item>
     </style>
