--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:minHeight">40dp</item>
         <item name="android:minWidth">212dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">236dp</item>
         <item name="android:textColor">@color/text_white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:singleLine">true</item>
