--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -133,8 +133,8 @@
     </style>
 
     <style name="topfaceCheckbox">
+        <item name="android:button">@null</item>
         <item name="android:drawableLeft">@drawable/checkbox_selector</item>
-
     </style>
 
     <style name="actionsFont">
