--- a/src/main/res/layout/topface_registration.xml
+++ b/src/main/res/layout/topface_registration.xml
@@ -71,15 +71,18 @@
             <Spinner
                 android:id="@+id/spnSex"
                 android:layout_width="0dp"
+                android:background="@drawable/input_normal"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5" />
+                android:layout_weight="0.6" />
 
             <TextView
                 android:id="@+id/tvBirthday"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.4"
                 android:gravity="center"
+                android:layout_marginLeft="36dp"
+                android:background="@drawable/input_normal"
                 android:text="@string/birthday"
                 android:textColor="#234144"
                 android:textSize="16sp" />
