--- a/src/main/res/layout/form_gifts.xml
+++ b/src/main/res/layout/form_gifts.xml
@@ -13,5 +13,6 @@
         android:paddingTop="16dp"
         android:paddingBottom="8dp"
         android:gravity="center_vertical"
+        android:background="@color/bg_white"
         android:layout_gravity="center_vertical" />
 </LinearLayout>
