--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -106,4 +106,23 @@
         <item name="android:elevation">@dimen/buttons_elevation_value</item>
     </style>
 
+    <style name="Theme.Topface.Navigation" parent="Theme.Topface">
+        <item name="selectableItemBackground">@drawable/ripple</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="homeAsUpIndicator">@null</item>
+        <item name="android:homeAsUpIndicator">@null</item>
+    </style>
+
+    <style name="NoWindowAnimation" parent="Theme.Topface">
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="selectableItemBackground">@drawable/ripple</item>
+    </style>
+
 </resources>
