--- a/src/main/res/values-v21/themes.xml
+++ b/src/main/res/values-v21/themes.xml
@@ -1,22 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Topface.Navigation" parent="Theme.Topface">
-        <item name="selectableItemBackground">@drawable/ripple</item>
-        <item name="windowActionBarOverlay">true</item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="windowActionBar">false</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="homeAsUpIndicator">@null</item>
-        <item name="android:homeAsUpIndicator">@null</item>
-    </style>
-
-    <style name="NoWindowAnimation" parent="Theme.Topface">
-        <item name="android:windowAnimationStyle">@null</item>
+    <style name="Theme.Topface" parent="Theme._Topface">
         <item name="selectableItemBackground">@drawable/ripple</item>
     </style>
 
