--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Базовая тема приложения -->
-    <style name="Theme.Topface" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme._Topface" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/light_theme_color_primary</item>
         <item name="colorPrimaryDark">@color/light_theme_color_primary_dark</item>
         <item name="colorAccent">@color/light_theme_color_accent</item>
@@ -47,6 +47,8 @@
         <item name="actionModeCloseDrawable">@drawable/ic_check</item>
         <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
     </style>
+
+    <style name="Theme.Topface" parent="Theme._Topface"></style>
 
     <!-- transparent activity theme -->
     <style name="Theme.Transparent" parent="Topface.Theme.TransparentActionBarActivity">
