--- a/src/main/res/values/strings-profile.xml
+++ b/src/main/res/values/strings-profile.xml
@@ -12,14 +12,14 @@
     <string name="profile_form_status_female_4">I\'m here to chat</string>
     <string name="profile_form_education_male_0">High school diploma</string>
     <string name="profile_form_education_male_1">College student</string>
-    <string name="profile_form_education_male_2">BA or above</string>
+    <string name="profile_form_education_male_2">University degree or above</string>
     <string name="profile_form_education_male_3">More than one degree</string>
     <string name="profile_form_education_male_4">Some college</string>
     <string name="profile_form_education_male_5">Not even a school diploma</string>
     <string name="profile_form_education_male_6">I\'m just very smart</string>
     <string name="profile_form_education_female_0">High school diploma</string>
     <string name="profile_form_education_female_1">College student</string>
-    <string name="profile_form_education_female_2">BA or above</string>
+    <string name="profile_form_education_female_2">University degree or above</string>
     <string name="profile_form_education_female_3">More than one degree</string>
     <string name="profile_form_education_female_4">Some college</string>
     <string name="profile_form_education_female_5">Not even a school diploma</string>
@@ -35,14 +35,14 @@
     <string name="profile_form_character_male_0">Easy</string>
     <string name="profile_form_character_male_1">Tough</string>
     <string name="profile_form_character_male_2">Firm</string>
-    <string name="profile_form_character_male_3">Moderate</string>
+    <string name="profile_form_character_male_3">Acquiescent</string>
     <string name="profile_form_character_male_4">Calm</string>
     <string name="profile_form_character_male_5">Restless</string>
     <string name="profile_form_character_male_6">Nobody\'s complained yet</string>
     <string name="profile_form_character_female_0">Easy</string>
     <string name="profile_form_character_female_1">Tough</string>
     <string name="profile_form_character_female_2">Firm</string>
-    <string name="profile_form_character_female_3">Moderate</string>
+    <string name="profile_form_character_female_3">Acquiescent</string>
     <string name="profile_form_character_female_4">Calm</string>
     <string name="profile_form_character_female_5">Restless</string>
     <string name="profile_form_character_female_6">Noone\'s complained yet</string>
@@ -70,12 +70,12 @@
     <string name="profile_form_fitness_female_5">Big is the new sexy</string>
     <string name="profile_form_marriage_male_0">Not yet</string>
     <string name="profile_form_marriage_male_1">Not Anymore</string>
-    <string name="profile_form_marriage_male_2">In a relationship</string>
+    <string name="profile_form_marriage_male_2">In a Relationship</string>
     <string name="profile_form_marriage_male_3">Yet</string>
     <string name="profile_form_marriage_male_4">Yes</string>
     <string name="profile_form_marriage_male_5">Forever</string>
     <string name="profile_form_marriage_male_6">Is that a problem?</string>
-    <string name="profile_form_marriage_male_7">God, no</string>
+    <string name="profile_form_marriage_male_7">Never</string>
     <string name="profile_form_marriage_female_0">Not yet</string>
     <string name="profile_form_marriage_female_1">Not Anymore</string>
     <string name="profile_form_marriage_female_2">In a Relationship</string>
@@ -83,7 +83,7 @@
     <string name="profile_form_marriage_female_4">Yes</string>
     <string name="profile_form_marriage_female_5">Forever</string>
     <string name="profile_form_marriage_female_6">Is it a problem?</string>
-    <string name="profile_form_marriage_female_7">God, no</string>
+    <string name="profile_form_marriage_female_7">Never</string>
     <string name="profile_form_finances_male_0">Very high</string>
     <string name="profile_form_finances_male_1">High</string>
     <string name="profile_form_finances_male_2">Above average</string>
@@ -221,8 +221,8 @@
     <string name="form_habits_restaurants_1">Favorite restaurants</string>
     <string name="form_habits_restaurants_2">Your favorite restaurants</string>
     <string name="form_habits_restaurants_3">Your favorite restaurants</string>
-    <string name="form_detail_about_dating_0">About the first date with a girl</string>
-    <string name="form_detail_about_dating_1">About the perfect first date</string>
+    <string name="form_detail_about_dating_0">About your first date  with a girl</string>
+    <string name="form_detail_about_dating_1">About your ideal first date</string>
     <string name="form_detail_about_dating_2">What would your first date with a girl be like?</string>
     <string name="form_detail_about_dating_3">Describe your perfect date</string>
     <string name="form_detail_archievements_0">Biggest achievements in life</string>
