--- a/src/main/res/layout/promo_popup.xml
+++ b/src/main/res/layout/promo_popup.xml
@@ -10,8 +10,11 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:background="@color/bg_white">
+        android:background="@color/bg_white"
+        android:paddingBottom="20dp"
+        android:paddingLeft="42dp"
+        android:paddingRight="42dp"
+        android:paddingTop="30dp">
 
         <TextView
             android:id="@+id/airMessagesTitle"
@@ -20,7 +23,7 @@
             android:layout_alignParentTop="true"
             android:gravity="center"
             style="@style/TitleBlackText"
-            android:textSize="14sp"
+            android:textSize="20sp"
             android:text="@string/general_attention"
             android:minHeight="50dp"/>
 
@@ -30,12 +33,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/airMessagesTitle"
             android:gravity="center"
-            style="@style/TitleBlackText"
-            android:textSize="13sp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp" />
+            android:textColor="@color/bg_main"
+            android:textSize="16sp"
+            android:paddingTop="30dp"
+            android:paddingBottom="28dp" />
 
         <View
             android:id="@+id/fakeView"
@@ -59,7 +60,7 @@
             android:singleLine="true"
             android:textSize="14sp"/>
 
-        <Button
+                <Button
             style="@style/Widget.Topface.Button.Big.Gray"
             android:id="@+id/deleteMessages"
             android:layout_height="wrap_content"
