--- a/src/main/res/layout/buy_widget.xml
+++ b/src/main/res/layout/buy_widget.xml
@@ -6,7 +6,7 @@
     android:padding="5dp"
     android:background="#1f1f1f">
 
-    <com.topface.topface.ui.views.ServicesTextView xmlns:stv="http://schemas.android.com/apk/res/com.topface.topface"
+    <com.topface.topface.ui.views.ServicesTextView xmlns:stv="http://schemas.android.com/apk/res-auto"
         android:id="@+id/menuCurCoins"
         stv:maxChars="4"
         stv:charPadding="7"
@@ -16,7 +16,7 @@
         android:layout_alignParentLeft="true"
         stv:image="@drawable/ic_coins" />
 
-    <com.topface.topface.ui.views.ServicesTextView xmlns:stv="http://schemas.android.com/apk/res/com.topface.topface"
+    <com.topface.topface.ui.views.ServicesTextView xmlns:stv="http://schemas.android.com/apk/res-auto"
         android:id="@+id/menuCurLikes"
         stv:maxChars="4"
         stv:charPadding="7"
