--- a/src/main/res/layout/dialog_delete_account.xml
+++ b/src/main/res/layout/dialog_delete_account.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
 
-    <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
+    <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res-auto"
         ivr:preProcessor="mask"
         ivr:clipMask="@drawable/feed_photo_mask"
         android:background="@drawable/feed_photo_selector"
