--- a/src/main/res/layout/fragment_buy.xml
+++ b/src/main/res/layout/fragment_buy.xml
@@ -1,69 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <com.topface.IllustratedTextView.IllustratedTextView
-            android:id="@+id/payReasonFragmentBuy"
-            style="@style/PayReasonView" />
-
-        <ViewStub
-            android:id="@+id/EditorTestStub"
-            android:layout="@layout/fragment_buy_editor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="10dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/fbBuyingDisabled"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                style="@style/TitleGrayText"
-                android:text="@string/general_buying_disabled"
-                android:visibility="gone" />
+            <com.topface.IllustratedTextView.IllustratedTextView
+                android:id="@+id/payReasonFragmentBuy"
+                style="@style/PayReasonView" />
 
-            <TextView
-                android:id="@+id/likes_title"
-                style="@style/GrayText"
+            <ViewStub
+                android:id="@+id/EditorTestStub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="2dp"
-                android:text="@string/buying_sympathies" />
+                android:layout="@layout/fragment_buy_editor" />
 
             <LinearLayout
-                android:id="@+id/fbLikes"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
-
-            <!-- Money -->
-            <TextView
-                android:id="@+id/coins_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                style="@style/GrayText"
-                android:layout_marginBottom="2dp"
-                android:text="@string/buying_money" />
-
-            <LinearLayout
-                android:id="@+id/fbCoins"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp" />
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/fbBuyingDisabled"
+                    style="@style/TitleGrayText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/general_buying_disabled"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/likes_title"
+                    style="@style/GrayText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/buying_sympathies" />
+
+                <LinearLayout
+                    android:id="@+id/fbLikes"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+
+                <!-- Money -->
+                <TextView
+                    android:id="@+id/coins_title"
+                    style="@style/GrayText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/buying_money" />
+
+                <LinearLayout
+                    android:id="@+id/fbCoins"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="vertical" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/purchases_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+</RelativeLayout>
