--- a/src/main/res/layout/fragment_buy_premium.xml
+++ b/src/main/res/layout/fragment_buy_premium.xml
@@ -1,69 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="fill_parent"
-    android:layout_width="fill_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/fbpContainer"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp">
+            android:orientation="vertical">
 
-            <com.topface.IllustratedTextView.IllustratedTextView
-                android:id="@+id/payReasonFragmentBuyPremium"
-                style="@style/PayReasonView" />
-
-            <TextView
-                android:id="@+id/fbpBuyingDisabled"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                style="@style/TitleGrayText"
-                android:text="@string/general_buying_disabled"
-                android:visibility="gone"
-                android:layout_margin="5dp" />
-
-            <ViewStub
-                android:id="@+id/EditorTestStub"
-                android:layout="@layout/fragment_buy_editor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:id="@+id/fbpBtnContainer"
+                android:id="@+id/fbpContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
+                <com.topface.IllustratedTextView.IllustratedTextView
+                    android:id="@+id/payReasonFragmentBuyPremium"
+                    style="@style/PayReasonView" />
+
+                <TextView
+                    android:id="@+id/fbpBuyingDisabled"
+                    style="@style/TitleGrayText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/general_buying_disabled"
+                    android:visibility="gone" />
+
+                <ViewStub
+                    android:id="@+id/EditorTestStub"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout="@layout/fragment_buy_editor" />
+
+                <LinearLayout
+                    android:id="@+id/fbpBtnContainer"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/editPremiumContainer"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <include
+                    android:id="@+id/fepInvis"
+                    style="@style/WhiteListItem.Underline"
+                    layout="@layout/vip_item_edit_form_switch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/form_item_height" />
+
+                <include
+                    android:id="@+id/fepBlackList"
+                    style="@style/WhiteListItem.Underline"
+                    layout="@layout/vip_item_edit_form_select"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/form_item_height" />
+
+            </LinearLayout>
         </LinearLayout>
+    </ScrollView>
 
-        <LinearLayout
-            android:id="@+id/editPremiumContainer"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                android:id="@+id/fepInvis"
-                style="@style/WhiteListItem.Underline"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/form_item_height"
-                layout="@layout/vip_item_edit_form_switch" />
-
-            <include
-                android:id="@+id/fepBlackList"
-                style="@style/WhiteListItem.Underline"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/form_item_height"
-                layout="@layout/vip_item_edit_form_select" />
-
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    <ProgressBar
+        android:id="@+id/purchases_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+</RelativeLayout>
