--- a/src/main/res/layout/fragment_profile.xml
+++ b/src/main/res/layout/fragment_profile.xml
@@ -19,6 +19,7 @@
         android:id="@+id/vpFragments"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="@color/bg_white"
         android:layout_below="@id/profileTabs" />
 
     <com.topface.topface.ui.views.ProgressBarWithAlpha
