--- a/src/main/res/layout/purchases_fragment.xml
+++ b/src/main/res/layout/purchases_fragment.xml
@@ -18,6 +18,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/purchasesPager"
+        android:background="@color/bg_white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/purchasesTabs" />
