--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1176,4 +1176,51 @@
         <item name="android:textColor">#1F1F1F</item>
         <item name="android:textSize">14sp</item>
     </style>
+
+    <style name="HideAdmirationNavigationButtons">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1.0</item>
+        <item name="android:background">@null</item>
+        <item name="android:textSize">0sp</item>
+    </style>
+
+    <style name="HideAdmirationProfileButton" parent="HideAdmirationNavigationButtons">
+        <item name="android:drawableTop">@drawable/button_person_selector</item>
+    </style>
+
+    <style name="HideAdmirationSympathyButton" parent="HideAdmirationNavigationButtons">
+        <item name="android:drawableTop">@drawable/button_favorite_selector</item>
+    </style>
+
+    <style name="HideAdmirationSkipButton" parent="HideAdmirationNavigationButtons">
+        <item name="android:drawableTop">@drawable/button_close_selector</item>
+    </style>
+
+    <style name="InputButtons">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:background">@drawable/input_buttons_selector</item>
+    </style>
+
+    <style name="InputSendButton" parent="@style/InputButtons">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:src">@drawable/btn_send_message_selector</item>
+    </style>
+
+    <style name="InputGiftButton" parent="@style/InputButtons">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:src">@drawable/btn_send_gift_selector</item>
+    </style>
+
+    <style name="LeftMenuItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
+
+    <style name="LeftMenuItemBackground" parent="@style/LeftMenuItem">
+        <item name="android:background">@drawable/bg_left_menu_item_selector</item>
+    </style>
 </resources>
