--- a/src/main/res/layout/item_left_menu_button_with_badge.xml
+++ b/src/main/res/layout/item_left_menu_button_with_badge.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_left_menu_item_selector"
-    android:padding="16dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/LeftMenuItemBackground">
 
     <ImageView
         android:id="@+id/image_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:background="@null"
+        android:clickable="false" />
 
     <TextView
         android:id="@+id/tvCounterBadge"
+        style="@style/LeftMenuBadge"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        style="@style/LeftMenuBadge"/>
+        android:clickable="false" />
 
     <TextView
         android:id="@+id/btnMenu"
-        android:layout_toRightOf="@id/image_icon"
-        android:layout_toLeftOf="@id/tvCounterBadge"
+        style="@style/LeftMenuButtons"
         android:layout_centerVertical="true"
-        style="@style/LeftMenuButtons"/>
+        android:layout_toLeftOf="@id/tvCounterBadge"
+        android:layout_toRightOf="@id/image_icon"
+        android:background="@null"
+        android:clickable="false" />
 
 </RelativeLayout>
