--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -121,16 +121,16 @@
     <style name="InputSendButton" parent="@style/InputButtons">
         <item name="android:layout_gravity">center</item>
         <item name="android:src">@drawable/btn_send_message_selector</item>
-        <item name="android:background">@drawable/input_buttons_selector_v21</item>
+        <item name="android:background">@drawable/ripple</item>
     </style>
 
     <style name="InputGiftButton" parent="@style/InputButtons">
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:src">@drawable/btn_send_gift_selector</item>
-        <item name="android:background">@drawable/input_buttons_selector_v21</item>
+        <item name="android:background">@drawable/ripple</item>
     </style>
 
-    <style name="LeftMenuItemBackground" parent="@style/LeftMenuItem">
-        <item name="android:background">@drawable/bg_left_menu_item_selector_v21</item>
+    <style name="LeftMenuSelector">
+        <item name="android:listSelector">@drawable/bg_left_menu_item_selector_v21</item>
     </style>
 </resources>
