--- a/src/main/res/drawable-v21/bg_left_menu_item_selector_v21.xml
+++ b/src/main/res/drawable-v21/bg_left_menu_item_selector_v21.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?android:colorControlHighlight">
-    <!-- <item android:drawable="@drawable/bg_left_menu_item_selector" />-->
+    <item android:drawable="@drawable/bg_left_menu_item_selector" />
 </ripple>
