--- a/src/main/res/layout/item_left_menu_button_with_badge.xml
+++ b/src/main/res/layout/item_left_menu_button_with_badge.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/LeftMenuItemBackground">
+    style="@style/LeftMenuViewStyle">
 
     <ImageView
         android:id="@+id/image_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:background="@null"
-        android:clickable="false" />
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/tvCounterBadge"
         style="@style/LeftMenuBadge"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:clickable="false" />
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/btnMenu"
         style="@style/LeftMenuButtons"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/tvCounterBadge"
-        android:layout_toRightOf="@id/image_icon"
-        android:background="@null"
-        android:clickable="false" />
+        android:layout_toRightOf="@id/image_icon" />
 
 </RelativeLayout>
