--- a/src/main/res/layout/item_left_menu_button_with_photo.xml
+++ b/src/main/res/layout/item_left_menu_button_with_photo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/LeftMenuItemBackground">
+    style="@style/LeftMenuViewStyle">
 
     <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
         android:id="@+id/image_icon"
@@ -10,7 +10,6 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:background="@drawable/left_menu_rounded_avatar"
-        android:clickable="false"
         ivr:preProcessor="roundAvatar" />
 
     <ImageView
@@ -19,16 +18,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@null"
-        android:clickable="false"
         android:visibility="gone" />
 
     <TextView
         android:id="@+id/btnMenu"
         style="@style/LeftMenuButtons"
         android:layout_toLeftOf="@id/image_badge"
-        android:layout_toRightOf="@id/image_icon"
-        android:background="@null"
-        android:clickable="false" />
+        android:layout_toRightOf="@id/image_icon" />
 
 </RelativeLayout>
