--- a/src/main/res/layout/layout_left_menu_footer.xml
+++ b/src/main/res/layout/layout_left_menu_footer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/LeftMenuItemBackground">
+    style="@style/LeftMenuViewStyle">
 
     <ImageView
         android:id="@+id/image_icon"
@@ -9,15 +9,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/ic_balance_selector"
-        android:clickable="false" />
+        android:background="@drawable/ic_balance_selector" />
 
     <com.topface.IllustratedTextView.IllustratedTextView
         android:id="@+id/btnMenu"
         style="@style/LeftMenuButtons"
-        android:background="@null"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/image_icon"
-        android:clickable="false" />
+        android:layout_toRightOf="@id/image_icon" />
 
 </RelativeLayout>
