--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1214,13 +1214,13 @@
         <item name="android:src">@drawable/btn_send_gift_selector</item>
     </style>
 
-    <style name="LeftMenuItem">
+    <style name="LeftMenuViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">16dp</item>
     </style>
 
-    <style name="LeftMenuItemBackground" parent="@style/LeftMenuItem">
-        <item name="android:background">@drawable/bg_left_menu_item_selector</item>
+    <style name="LeftMenuSelector">
+        <item name="android:listSelector">@drawable/bg_left_menu_item_selector</item>
     </style>
 </resources>
