--- a/src/main/res/drawable-v21/ripple_black.xml
+++ b/src/main/res/drawable-v21/ripple_black.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#000000"></ripple>
+    android:color="?android:colorControlHighlight">
+    <item android:drawable="@drawable/bg_left_menu_item_selector" />
+</ripple>
